# picobat

./: .gitattributes  .gitignore  BUILD.readme  COPYING.darkbox  GUIDELINES  GUIDELINES.md  GUIDELINES.tea  Makefile  Makefile.am  Makefile.in  README  README.html  README.md  README.tea  README.tpl  THANKS  THANKS.md  THANKS.tea  WHATSNEW  WHATSNEW.html  WHATSNEW.md  WHATSNEW.tea  aclocal.m4  build-bin.sh  build-install.sh  build-mingw.sh  build-prepare.sh  confdefs.h  config.c.in  config.h  config.h.in  config.mk  config.status  configure  configure.ac  doc.ft  doc.hd  femto.mk  footer.tpl  repo.ft
.github/workflows/: build.yml
doc/htmlen_US/: random.html
dos9/: Dos9.c  Makefile  Makefile.am  Makefile.in
dos9/command/: Dos9_Alias.c  Dos9_Alias.h  Dos9_Ask.c  Dos9_Ask.h  Dos9_Block.c  Dos9_Block.h  Dos9_Break.c  Dos9_Break.h  Dos9_Call.c  Dos9_Call.h  Dos9_Cd.c  Dos9_Cd.h  Dos9_Chcp.c  Dos9_Chcp.h  Dos9_Cls.c  Dos9_Cls.h  Dos9_CmdLib.h  Dos9_Color.c  Dos9_Color.h  Dos9_CommandInfo.c  Dos9_CommandInfo.h  Dos9_Commands.h  Dos9_Conditions.c  Dos9_Conditions.h  Dos9_Copy.c  Dos9_Copy.h  Dos9_Del.c  Dos9_Del.h  Dos9_Dir.c  Dos9_Dir.h  Dos9_Echo.c  Dos9_Echo.h  Dos9_Exit.c  Dos9_Exit.h  Dos9_FileCommands.c  Dos9_FileCommands.h  Dos9_Find.c  Dos9_Find.h  Dos9_For.c  Dos9_For.h  (+55 more)
dos9/command/cmdlib/: Dos9_CmdLibArgs.c
dos9/console/: Dos9_Console.h  Dos9_ConsoleANSI.c  Dos9_ConsoleWin.c
dos9/core/: Dos9_Alias.c  Dos9_Alias.h  Dos9_Args.c  Dos9_Args.h  Dos9_Block.c  Dos9_Block.h  Dos9_Clone.c  Dos9_Clone.h  Dos9_Completion.c  Dos9_Completion.h  Dos9_Context.h  Dos9_Core.h  Dos9_Debug.c  Dos9_Debug.h  Dos9_DirStack.c  Dos9_DirStack.h  Dos9_Env.c  Dos9_Env.h  Dos9_EnvStack.c  Dos9_EnvStack.h  Dos9_Exec.c  Dos9_Exec.h  Dos9_Exit.c  Dos9_Exit.h  Dos9_ExitInt.c  Dos9_ExitInt.h  Dos9_Expand.c  Dos9_Expand.h  Dos9_ExpandAlias.c  Dos9_ExpandAlias.h  Dos9_FdInheritance.c  Dos9_FdInheritance.h  Dos9_FilePath.c  Dos9_FilePath.h  Dos9_Globals.c  Dos9_Globals.h  Dos9_Jump.c  Dos9_Jump.h  Dos9_Modules.h  Dos9_OsStream.c  (+22 more)
dos9/core/Exp/: Dos9_Exp.c  Dos9_Exp.h  test.c
dos9/core/Modules/Parse/: Dos9_Parse.c  Dos9_Parse.h
dos9/core/Modules/Read/: Dos9_Read.c  Dos9_Read.h
dos9/core/Stream/: Dos9_Stream.c  Dos9_Stream.h
dos9/errors/: Dos9_Errors.c  Dos9_Errors.h
dos9/init/: Dos9_Init.c  Dos9_Init.h
dos9/lang/: Dos9_Help.c  Dos9_Help.h  Dos9_Lang.c  Dos9_Lang.h  Dos9_ShowHelp.c  Dos9_ShowHelp.h
dos9/linenoise/: Dos9_LineNoise.c  Dos9_LineNoise.h  linenoise.c  linenoise.h
dos9ize/: Makefile  Makefile.am  Makefile.in  dos9ize.c  dos9ize.h  pairs.c
dump/: Makefile  Makefile.am  Makefile.in  dump.c  dump.h  dump_h_gen  dump_h_gen.c
hlp/: Makefile
hlp/src/: hlp.c  hlp_enc.c  hlp_enc.h  hlp_load.c  hlp_load.h  hlp_show.c  hlp_show.h  hlp_showconst.h
hlp_make/: Makefile  hlp_make.c
include/: LibDos9.h
libDos9/: LibDos9.h  Makefile  Makefile.am  Makefile.in  libDos9-export.h  libDos9-int.h  libDos9.h
libDos9/cmdlib/: Dos9_String.c
libDos9/cmdlist/: Dos9_CmdList.c
libDos9/console/: Dos9_Console.c  Dos9_ConsoleANSI.c  Dos9_ConsoleDummy.c  Dos9_ConsoleWin.c
libDos9/console/linux/: Dos9_Console.c
libDos9/dir/: Dos9_Attr.c  Dos9_Dir.c  Dos9_UnicodeDir.c
libDos9/enc/: Dos9_Enc.c
libDos9/estr/: Dos9_Estr.c
libDos9/file/: Dos9_File.h  Dos9_StdFile.c  Dos9_Win32File.c
libDos9/init/: Dos9_Init.c
libDos9/sleep/: Dos9_Sleep.c
libDos9/stack/: Dos9_Stack.c
libDos9/thread/: Dos9_Thread.c
libcu8/: CHANGELOG  COPYING  DOC  Makefile  Makefile.am  Makefile.in  README  config.c.in  config.h.in  configure  configure.ac
libcu8/include/: libcu8.h
libcu8/src/: Makefile  Makefile.am  Makefile.in  config.h.in  dir.c  dirent.c  dup.c  encoding.c  fdio.c  find.c  find_gen.c  init.c  inject.c  internals.h  read.c  spawn.c  stat.c  stat_gen.c  write.c
libcu8/src/iconv/: iconv.c
libcu8/test/: Makefile  Makefile.am  Makefile.in  ansi.c  check_850  check_nl  check_u8  convert.c  fgetc850.c  fgets_nl.c  fgets_oversize.c  invalid.c  log_msg.c  log_msg.h  read.c  read850.c  readconsole.c  writeconsole.c
libdos9/: LibDos9.h  Makefile  Makefile.in
libdos9/cmdlist/: Dos9_CmdList.c
libdos9/dir/: Dos9_Attr.c  Dos9_Dir.c
libdos9/enc/: Dos9_Enc.c
libdos9/estr/: Dos9_Estr.c
libfasteval/: AUTHORS  Makefile
libinteval/: Makefile  Makefile.am  Makefile.in  global.h  inteval.c  inteval.h  lexer.c  lexer.l  parser.c  parser.h  parser.y
libinteval/lib/: global.h  inteval.c  lexer.c  lexer.l  parser.c  parser.h  parser.y  parser_sym.h
libmatheval/: Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.c.in  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libmatheval.pc  libmatheval.pc.in
libmatheval-dos9/: Makefile  Makefile.in  NEWS
libmatheval/doc/: Makefile.am  Makefile.in  libmatheval.info  libmatheval.texi  stamp-vti  version.texi
libmatheval/lib/: Makefile.am  Makefile.in  config.h  error.c  error.h  g77_interface.c  matheval.c  matheval.h  node.c  node.h  parser.c  parser.h  parser.y  scanner.c  scanner.l  symbol_table.c  symbol_table.h  xmalloc.c  xmalloc.h  xmath.c
libmatheval/tests/: Makefile.am  Makefile.in  basics.at  bin_ops.at  constants.at  functions.at  matheval.c  matheval.sh.in  numbers.at  testsuite.at  un_ops.at  variables.at
libpbat/: Makefile  libpBat-int.h  libpBat.h
man/: footer  header  meta
microgettext/: COPYING  Makefile  README.md  gettext.h  microgettext.c
modules/: Makefile
pbat/: Makefile  pBat.c
pbatize/: Makefile  pairs.c  pbatize.c  pbatize.h
po/: Makefile  Makefile.in  domains.list  locales.list
scripts/: Dos9_Auto.bat  Dos9_Auto.bat.in  Dos9_Auto.in  Makefile  Makefile.in  dos9_start  hlp.bat  hlp.bat.in  pBat_Auto.bat  pBat_Auto.in
tea/: Makefile  Makefile.am  Makefile.in
tea/src/: Tea.h  Tea_Lib.h  Tea_Load.c  Tea_Node.c  Tea_Output.c  tea.c  tea_hlp_modifers.c  tea_html_modifiers.c  tea_modes.c  tea_modes.h  tea_modifier.c  tea_modifier.h  tea_strupr.c  tea_strupr.h
tea_html/: Makefile  tea_html.c  tea_html.h  tea_html_funcs.c
tests/: Makefile  run-test.cmd
(+506 files in other folders)
